# MidiGuitarPedals

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
CMake/: GitFunctions.cmake
EmpressReverb/: CMakeLists.txt
EmpressReverb/Source/: EmpressReverb.cpp  EmpressReverb.h  EmpressReverbStates.cpp  EmpressReverbStates.h  FootSwitch.cpp  FootSwitch.h  Knobs.cpp  Knobs.h  LightsTimer.cpp  LightsTimer.h  Main.cpp  MidiDeviceList.h  defines.h
